--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dream List</title>
+    <title>Dewi Shanty</title>
     <link href="i_style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -14,17 +14,14 @@
                 <a href="finance.html"><li>Main Page</li></a>
             </ul>
         </nav>
-        <div class="container1">
-            <form action="#">
-                <input type="search" id="searchbar" name="searchbar" value="Search Here...">
-            </form>
-        </div>
-
     </header>
 
 
         <!-- MAIN CONTENT -->
         <section>
+            <div class="container1">
+            </div>
+    
             <div class="container2">
                 <h1>tes</h1>
             </div>
@@ -55,11 +52,94 @@
                     </ul>
                 </section>
             </div>
+
+            <div class="container3">
+
+                <!-- <h1 id="searchbar">Searchbar</h1> -->
+                <form action="#">
+                    <input type="search" id="searchbar" name="searchbar" value="Search Here...">
+                </form>
+            </div>
+
+            <div class="container2">
+                <section class="main">
+                    <ul>
+                        <li id="ask1">
+                            <a href="https://flipid.zendesk.com/hc/id">
+                                <span >API Big Flip</span>
+                            </a>
+                        </li>
+                        <li id="ask2">
+                            <a href="https://flipid.zendesk.com/hc/id">
+                                <span>Web</span>
+                            </a>
+                        </li>
+                        <li id="ask3">
+                            <a href="https://flipid.zendesk.com/hc/id">
+                                <span>Big Flip</span>
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+
+            <div class="container2">
+                <section class="main">
+                    <ul>
+                        <li id="ask1">
+                            <a href="https://flipid.zendesk.com/hc/id">
+                                <span >API Big Flip</span>
+                            </a>
+                        </li>
+                        <li id="ask2">
+                            <a href="https://flipid.zendesk.com/hc/id">
+                                <span>Web</span>
+                            </a>
+                        </li>
+                        <li id="ask3">
+                            <a href="https://flipid.zendesk.com/hc/id">
+                                <span>Big Flip</span>
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+
+            <div class="container4">
+            </div>
+
+            <div class="container2">
+                <section class="main">
+                    <ul>
+                        <li id="ask1">
+                            <a href="https://flipid.zendesk.com/hc/id">
+                                <span >API Big Flip</span>
+                            </a>
+                        </li>
+                        <li id="ask2">
+                            <a href="https://flipid.zendesk.com/hc/id">
+                                <span>Web</span>
+                            </a>
+                        </li>
+                        <li id="ask3">
+                            <a href="https://flipid.zendesk.com/hc/id">
+                                <span>Big Flip</span>
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+
+
+
+            <div class="container55">
+            </div>
         </section>
     
             <!-- FOOTER -->
-    <footer>
-        <a href="#"><h4>This is for hacktiv8 final project in phase 0</h4></a>
+    <footer class="myfooter">
+        <h2>This is for Hacktiv8 final project in phase-0</h2>
+        <h4>Dewi Shanty W</h4>
     </footer>
 
     <script src=""></script>
