--- a/finance.html
+++ b/finance.html
@@ -21,17 +21,15 @@
 
     <div class="content1">
         <h1 id="title">Hitung Pengeluaranmu...</h1>
-        <div id="namauser"></div>
 
+        <div id="namauser"></div>
         <div class="name">
             <input type="text" id="myname" name="myname" value="Isi namamu disini:">
             <input type="button" id="btnname" value="Submit" />
         </div>
 
-
         <div class="notes">
             <form class="myform" id="myform" action="#">
-
                 <label for="saldoawal">Saldo Awal : Rp. </label> 
                 <input type="number" id="saldoawal" name="saldoawal"> 
                 <input type="button" id="btn1" value="Submit" />
@@ -63,28 +61,10 @@
                 <br>
 
                 <label for="calculate"></label>
-                <input type="button" id="tambahkan" value="Tambah Transaksi" />
+                <input type="button" id="tambahkan" value="Tambah Transaksi" /><br><br>   
 
-                <p id="saldoawal1"></p>               
-
-
-                <table id="mytable">
-                    <tr>
-                        <td>
-                            <p id="demo"></p>
-                        </td>
-                        <td>
-                            <p id="demo2"></p>
-                        </td>
-                    </tr>
-                </table>
-
-                <div id = "datadisplay"></div>
-                    
-                <br>
-                <br>
-                <br>
-
+                <p id="saldoawal1"></p><br><br>               
+                <div id = "datadisplay"></div><br><br><br>                    
                 <div id="saldoakhir"></p>               
             </form>
 
